tests/toy/neg/000480_mutation.toylang
program a = { a = bool 0; } .
